Trying to fix logo on iPhone 4s screen

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    padding: 2em 1.5em;
+    padding: 2em 1em;
 
     @media screen and (min-width: $screen-md-min) {
         padding-top: 4em;
